--- a/main.css
+++ b/main.css
@@ -1,81 +1,112 @@
 body{
     background: linear-gradient(to right, white, #D3D8E8);
-}
+    }
 
-form{
-    height: 82px;
-    min-width: 980px;
-    width: 1349px;
-    background-color:#365899;
-    position: absolute;
+header{
     
+    background-color:#365899;
+    max-height: 116px;     
     }   
+
+header:after {
+        content: "."; /* добавить содержимое: "." */
+        display: block;  /* сделать блоком, т.к. inline не может иметь clear */
+        clear: both;  /* с обеих сторон clear */
+        visibility: hidden; /* сделать невидимым, зачем нам точка внизу? */
+        height: 0;  /* сделать высоту 0, чтобы не занимал место */
+      }
 
 .logo{
     z-index:1;
-    position: absolute;
     font-size: 43px;
-    font-weight: bold;
     color:white;
     text-transform: lowercase;
-    font-family: Arial, Helvetica, sans-serif;
-    top: 24px;
-    left: 175px;
-
+    float: left;
+    margin: 34px 105px;
 }
+
 #login{
-    position: absolute;
+    
     border: 1px solid #bdc7d8;
-    width: 150px;
-    right: 490px;
-    top: 30px;
+    
+    float: left;
+    margin: -100px 527px;
 }
 
 #password{
-    position: absolute;
+    
     border: 1px solid #bdc7d8;
     width: 150px;
-    right: 250px;
-    top: 30px;
+    float: right;
+    margin: -100px 413px;
 }
 
 .first_label{
     color: #fff;
     font-size: 12px;
-    position: absolute;
-    right: 435px;
-    top:10px;
+    float: left;
+    margin: -123px 527px;
 }
+
 .second_label{
-    position: absolute;
     color:#fff;
     font-size: 12px;
-    right: 365px;
-    top:10px;
+    float: right;
+    margin: -123px 527px;
 }
+
 #btn{
-    position: absolute;
     background-color: #4267b2;
     border: 1px solid #ccd0d5;
     color:#fff;
-    top: 30px;
-    right: 180px;
-
+    float: right;
+    margin: -100px 335px;
 }
+
 .lost_pass{
-    position: absolute;
     color: #9cb4d8;
     font-weight: normal;
     text-decoration: none;
     font-size: 12px;
     cursor: pointer;
-    right: 315px;
-    bottom: 10px;
+    float: right;
+    margin: -75px 480px;
+    }
+
+.Connect{
+    float: left;
+    
+}
+#text_family{
+    color: #0e385f;
+    font-size: 20px;
+    font-weight: bold;
+    line-height: 29px;
+    margin-top: 40px;
+    width: 450px;
+    word-spacing: -1px;
+    float: left;
+    margin: -3px 210px;
+    }
+
+.img{
+    float: left;
+    margin: 1px 158px;
+    
+}
+#registration{
 
 }
 
+#registration:after {
+    content: "."; /* добавить содержимое: "." */
+    display: block;  /* сделать блоком, т.к. inline не может иметь clear */
+    clear: both;  /* с обеих сторон clear */
+    visibility: hidden; /* сделать невидимым, зачем нам точка внизу? */
+    height: 0;  /* сделать высоту 0, чтобы не занимал место */
+  }
 h1{
-    position: absolute;
+    
     font-family: 'Freight Sans Bold', Helvetica, Arial, sans-serif !important;
     font-weight: bold !important;
     letter-spacing: normal;
@@ -83,58 +114,53 @@ h1{
     color: #333;
     font-size: 36px;
     width:400px;
-    height: 86px;;
-    top: 120px;
-    right: 190px;
-}
+    height: 86px;
+    float: right;
+    margin: 10px 30px;
+    }
 p{
-    position: absolute;
     font-family: 'Freight Sans', Helvetica, Arial, sans-serif !important;
     font-weight: normal !important;
     letter-spacing: normal;
     text-rendering: optimizelegibility;
     font-size: 19px;
     color: #333;
-    right: 265px;
-    top: 220px;
+    float: right;
+    margin: 100px -353px;
+    
 }
 
 #name{
-    position: absolute;
-    right: 200px;
-    top: 300px;
-
+    
 }
 
 input[placeholder]{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
-    
-}
+    }
 
 #input_name{
-    position: absolute;
+    
     border-width: 1px;
     border-color: red;
     border-style: solid;
     border-radius: 5px;
     width: 192px;
     height: 39px;
-    right: 396px;
-    top:280px;
-    
-}
+    float: right;
+    margin: 140px -222px;
+    }
 
 #input_surname{
-    position: absolute;
+    
     border-width: 1px;
     border-color: red;
     border-style: solid;
     border-radius: 5px;
     width: 192px;
     height: 39px;
-    right: 191px;
-    top:280px;
+    float: right;
+    margin: 140px -430px;
     
 }
 
@@ -143,73 +169,70 @@ input[placeholder]{
 
 
 #input_email{
-    position: absolute;
+    
     border-width: 1px;
     border-color: red;
     border-style: solid;
     border-radius: 5px;
     width: 399px;
     height: 39px;
-    right: 190px;
-    top:345px;
     font-size: 18px;
+    float: right;
+    margin: 200px -428px;
     
 }
 
 
 #input_pass{
-    position: absolute;
+    
     border-width: 1px;
     border-color: red;
     border-style: solid;
     border-radius: 5px;
     width: 399px;
     height: 39px;
-    right: 190px;
-    top:413px;
     font-size: 18px;
+    float: right;
+    margin: 260px -428px;
     
 }
 
 #date{
-    position: absolute;
+    
     border-width: 1px;
     border-color: red;
     border-style: solid;
     border-radius: 5px;
     width: 199px;
     height: 39px;
-    right: 386px;
-    top:472px;
     font-size: 18px;
-    
+    float: right;
+    margin: 315px -228px;
 }
 
 
 .second_href{
-    position: absolute;
-    right: 230px;
-    top: 477px;
+    
     font-size: 12px;
     color: #365899;
     cursor: pointer;
     max-width: 140px;
+    float: right;
+    margin: 320px -386px;
 }
 
 #radio_btn{
-    position: absolute;
-    top: 540px;
-    right: 404px;
+    float: right;
+    margin: 372px -205px;
 }
 
 #rule{
     max-width: 316px;
-    position: absolute;
-    top:574px;
-    right: 267px;
     color: #777;
     font-size: 11px;
     font-family: Arial, Helvetica, sans-serif;
+    float: right;
+    margin: 403px -340px;
 }
 
 #btn_regist{
@@ -226,40 +249,31 @@ input[placeholder]{
     height: 39px;
     margin-top: 10px;
     margin-bottom: 10px;
-    position: absolute;
-    top:639px;
-    right: 386px;
-    text-shadow: 0 1px 2px rgba(0,0,0,.5)
+    text-shadow: 0 1px 2px rgba(0,0,0,.5);
+    float: right;
+    margin: 469px -216px;
 }
 
 #add_new{
-    position: absolute;
-    top:700px;
-    right: 180px;
+    
     max-width: 400px;
     color: #666;
     font-size: 13px;
     font-weight: bold;
+    float: right;
+    margin: 485px -422px;
 }
 
-.Connect{
-    position: absolute;
-    top:170px;
-    left: 180px;
+#Regist_end{
+    float: right;;
+    margin: 32px -3px;
+    
 }
 
-#text_family{
-    color: #0e385f;
-    font-size: 20px;
-    font-weight: bold;
-    line-height: 29px;
-    margin-top: 40px;
-    width: 450px;
-    word-spacing: -1px;
-    position:absolute;
-    bottom: 190px;
-    left: 50px;
-}
+
+
+
+
 
 
 
