--- a/main.css
+++ b/main.css
@@ -274,12 +274,40 @@ input[placeholder]{
 }
 
 .footer{
-    float: right;
+    float: left;
+    clear: both;
+    background-color: white;
+
     
+  
 }
 li{
     display: inline;
+    
 }
+
+.footer_href{
+    text-decoration: none;
+    font-size: 12px;
+    color: #365899;
+    cursor: pointer;
+}
+
+.footer_href:after {
+    content: "...."; /* добавить содержимое: "." */
+    visibility: hidden; /* сделать невидимым, зачем нам точка внизу? */
+    
+  }
+
+  
+span{
+    color: #737373;
+    font-size: 11px;
+}
+
+
+
+
 
 
 
