--- a/main.css
+++ b/main.css
@@ -1,58 +1,51 @@
 body{
     background: linear-gradient(to right, white, #D3D8E8);
-    }
+}
 
 header{
     
     background-color:#365899;
     max-height: 116px;     
-    }   
+}   
 
 header:after {
-        content: "."; /* добавить содержимое: "." */
-        display: block;  /* сделать блоком, т.к. inline не может иметь clear */
-        clear: both;  /* с обеих сторон clear */
-        visibility: hidden; /* сделать невидимым, зачем нам точка внизу? */
-        height: 0;  /* сделать высоту 0, чтобы не занимал место */
-      }
+    content: "."; /* добавить содержимое: "." */
+    display: block;  /* сделать блоком, т.к. inline не может иметь clear */
+    clear: both;  /* с обеих сторон clear */
+    visibility: hidden; /* сделать невидимым, зачем нам точка внизу? */
+    height: 0;  /* сделать высоту 0, чтобы не занимал место */
+}
 
 
-.form{
-    float: left;
-    margin: 26px 30px;
+form{
+    float: right;
+    margin: 19px 234px;
 }
 
 .logotype{
     float: left;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    
 }
+
 .regist_log{
     float: left;
-    margin:0;
-    padding: 0;
-    box-sizing: border-box;    
-
-    
 }
+
 .regist_pass{
     float: left;
     margin: 0px 11px;
-    padding: 0;
-    box-sizing: border-box;    
-
 }
+
 .logo{
     z-index:1;
     font-size: 43px;
     color:white;
     text-transform: lowercase;
-    float: left;
-    margin: 34px 105px;
+    
+    margin: 6px 100px;
     padding: 0;
     box-sizing: border-box;
+    text-decoration: none;
+    font-family: 'Freight Sans Bold', Helvetica, Arial, sans-serif;
 }
 
 .login{
@@ -120,6 +113,7 @@ header:after {
 
 .Connect{
     float: left;
+    margin: 40px 0px;
     
 }
 #text_family{
@@ -130,7 +124,6 @@ header:after {
     margin-top: 40px;
     width: 450px;
     word-spacing: -1px;
-    
     margin: -3px 210px;
     }
 
@@ -150,21 +143,10 @@ float: right;
     visibility: hidden; /* сделать невидимым, зачем нам точка внизу? */
     height: 0;  /* сделать высоту 0, чтобы не занимал место */
   }
-h1{
-    
-    font-family: 'Freight Sans Bold', Helvetica, Arial, sans-serif !important;
-    font-weight: bold !important;
-    letter-spacing: normal;
-    text-rendering: optimizelegibility;
-    color: #333;
-    font-size: 36px;
-    width:400px;
-    height: 86px;
-    
-    }
+
 p{
-    font-family: 'Freight Sans', Helvetica, Arial, sans-serif !important;
-    font-weight: normal !important;
+    font-family: 'Freight Sans', Helvetica, Arial, sans-serif;
+    font-weight: normal;
     letter-spacing: normal;
     text-rendering: optimizelegibility;
     font-size: 19px;
@@ -288,7 +270,7 @@ input[placeholder]{
     max-width: 400px;
     color: #666;
     font-size: 13px;
-    font-weight: bold;
+    
     
 }
 
